# get_weather

./: CHANGELOG.md  README.md  get_gfs.py  main.sh  plot_gfs.py  pyproject.toml  setup.py
get_weather/: README.md  pyproject.toml  setup.py
get_weather/get_weather/: __init__.py  core.py  utils.py
get_weather/tests/: test_core.py
tests/: test_module.py
