[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_python_package"
version = "0.1.0"
description = "A brief description of my_python_package"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88